# stm_button_rust

./: .gdbinit  .gitignore  Cargo.toml  README.md  memory.x  openocd.cfg  run-alternate
.cargo/: config
cad/button/: button-cache.lib  button-rescue.lib  button.kicad_pcb  button.sch  custom.dcm  custom.lib
cad/button/custom.pretty/: Ali_uSD_Adapter.kicad_mod  MountingHole_0.5mm.kicad_mod  MountingHole_1.5mm.kicad_mod  PJRC_uSD_Adapter.kicad_mod  Pad_2contacts.kicad_mod  Pad_4contacts.kicad_mod  Potentiometer_Trimmer-EVM3Y.kicad_mod  SW_PUSH-12mm.kicad_mod
src/: main.rs  util.rs
